fixes for overflowing text and quote content

--- a/bundle.css
+++ b/bundle.css
@@ -832,7 +832,9 @@ img {
     width: 730px;
     box-sizing: border-box;
     border-left: 4px solid #e9e8e8;
-    border-bottom: 4px solid #e9e8e8; }
+    border-bottom: 4px solid #e9e8e8;
+    height: 515px;
+    box-sizing: border-box; }
     .book.textimages > .book-container #book {
       width: 100% !important;
       display: table;
@@ -872,17 +874,25 @@ img {
           .book.textimages > .book-container #book .book-grid-two.bottom-right > div {
             float: right; }
         .book.textimages > .book-container #book .book-grid-two.quote > div > div {
-          padding-right: 110px; }
+          overflow: hidden;
+          padding: 0 110px 0 40px; }
           .book.textimages > .book-container #book .book-grid-two.quote > div > div .quote-text, .book.textimages > .book-container #book .book-grid-two.quote > div > div .quote-text p {
             font-size: 16px;
             font-family: Poly;
             line-height: 20px;
-            margin-bottom: 20px; }
+            max-height: 511px; }
+          .book.textimages > .book-container #book .book-grid-two.quote > div > div .quote-text p + p {
+            margin-top: 20px; }
           .book.textimages > .book-container #book .book-grid-two.quote > div > div .quote-source, .book.textimages > .book-container #book .book-grid-two.quote > div > div .quote-source p {
             font-size: 13px;
             font-family: Lato;
             font-weight: 900;
             line-height: 18px; }
+        .book.textimages > .book-container #book .book-grid-two.text > div > div {
+          overflow: hidden;
+          padding: 0 40px; }
+          .book.textimages > .book-container #book .book-grid-two.text > div > div > div {
+            max-height: 511px; }
         .book.textimages > .book-container #book .book-grid-two.single > div {
           margin: 0 auto;
           opacity: 1 !important; }
