--- a/src/scss/components/book.scss
+++ b/src/scss/components/book.scss
@@ -173,6 +173,8 @@
 		    box-sizing: border-box;
    			border-left: 4px solid #e9e8e8;
 			border-bottom: 4px solid #e9e8e8;
+			height: 515px;
+			box-sizing: border-box;
 			#book {
 				width: 100%!important;
 				display: table;
@@ -230,18 +232,33 @@
 					&.quote {
 						> div {
 							> div {
-								padding-right: 110px;
+								overflow: hidden;
+								padding: 0 110px 0 40px;
 								.quote-text, .quote-text p {
 									font-size: 16px;
 									font-family: Poly;
 									line-height: 20px;
-									margin-bottom: 20px;
+									max-height: 511px;
+								}
+								.quote-text p + p {
+									margin-top: 20px;
 								}
 								.quote-source, .quote-source p {
 									font-size: 13px;
 									font-family: Lato;
 									font-weight: 900;
 									line-height: 18px;
+								}
+							}
+						}
+					}
+					&.text {
+						> div {
+							> div {
+								overflow: hidden;
+								padding: 0 40px;
+								> div {
+									max-height: 511px;									
 								}
 							}
 						}
